Fixing arrows not alignt to center and body background on mobile

--- a/ui/src/components/Projects/projects.css
+++ b/ui/src/components/Projects/projects.css
@@ -62,6 +62,9 @@
 
 .annotation-link {
     background-color: var(--react-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
 }
 
